fix: home page link updated in login & sign up file

--- a/assets/html/Sign Up.html
+++ b/assets/html/Sign Up.html
@@ -139,7 +139,7 @@
                 Already have an account?<a href="./login.html"> login</a>
             </span>
         </div>
-        <a href="../../ecom.html" id="back">back to home page</a>
+        <a href="../../index.html" id="back">back to home page</a>
     </div>
 
     <script>
