--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -133,7 +133,7 @@
                 <div class="error"></div>
             </div>
         </form>
-        <a href="../../ecom.html" id="back">back to Home page</a>
+        <a href="../../index.html" id="back">back to Home page</a>
     </div>
 
     <script>
